Rerun simulations for relative cache sizes 0.0001,0.0002,0.0004,0.0008,0.1 (the only change was better coverage for 0.1)

--- a/code/scripts/data_processing.ipynb
+++ b/code/scripts/data_processing.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "9347f4c7",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84973</th>\n",
+       "      <th>85108</th>\n",
        "      <td>SIEVE</td>\n",
        "      <td>100</td>\n",
        "      <td>0.1000</td>\n",
@@ -371,7 +371,7 @@
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84974</th>\n",
+       "      <th>85109</th>\n",
        "      <td>SIEVE</td>\n",
        "      <td>200</td>\n",
        "      <td>0.2000</td>\n",
@@ -383,7 +383,7 @@
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84975</th>\n",
+       "      <th>85110</th>\n",
        "      <td>SIEVE</td>\n",
        "      <td>300</td>\n",
        "      <td>0.3000</td>\n",
@@ -395,7 +395,7 @@
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84976</th>\n",
+       "      <th>85111</th>\n",
        "      <td>SIEVE</td>\n",
        "      <td>400</td>\n",
        "      <td>0.4000</td>\n",
@@ -407,7 +407,7 @@
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84977</th>\n",
+       "      <th>85112</th>\n",
        "      <td>SIEVE</td>\n",
        "      <td>800</td>\n",
        "      <td>0.8000</td>\n",
@@ -420,7 +420,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>84978 rows × 9 columns</p>\n",
+       "<p>85113 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -431,11 +431,11 @@
        "3          FIFO                    4                       0.0010    1.2   \n",
        "4          FIFO                    8                       0.0020    1.2   \n",
        "...         ...                  ...                          ...    ...   \n",
-       "84973     SIEVE                  100                       0.1000    0.8   \n",
-       "84974     SIEVE                  200                       0.2000    0.8   \n",
-       "84975     SIEVE                  300                       0.3000    0.8   \n",
-       "84976     SIEVE                  400                       0.4000    0.8   \n",
-       "84977     SIEVE                  800                       0.8000    0.8   \n",
+       "85108     SIEVE                  100                       0.1000    0.8   \n",
+       "85109     SIEVE                  200                       0.2000    0.8   \n",
+       "85110     SIEVE                  300                       0.3000    0.8   \n",
+       "85111     SIEVE                  400                       0.4000    0.8   \n",
+       "85112     SIEVE                  800                       0.8000    0.8   \n",
        "\n",
        "       objects_actual  objects_theoretical  requests  miss_ratio  file_nr  \n",
        "0                4069                 5000    100000      1.0000        1  \n",
@@ -444,13 +444,13 @@
        "3                4069                 5000    100000      0.8205        1  \n",
        "4                4069                 5000    100000      0.7293        1  \n",
        "...               ...                  ...       ...         ...      ...  \n",
-       "84973            1000                 1000    100000      0.5013       16  \n",
-       "84974            1000                 1000    100000      0.3930       16  \n",
-       "84975            1000                 1000    100000      0.3061       16  \n",
-       "84976            1000                 1000    100000      0.2432       16  \n",
-       "84977            1000                 1000    100000      0.0730       16  \n",
+       "85108            1000                 1000    100000      0.5013       16  \n",
+       "85109            1000                 1000    100000      0.3930       16  \n",
+       "85110            1000                 1000    100000      0.3061       16  \n",
+       "85111            1000                 1000    100000      0.2432       16  \n",
+       "85112            1000                 1000    100000      0.0730       16  \n",
        "\n",
-       "[84978 rows x 9 columns]"
+       "[85113 rows x 9 columns]"
       ]
      },
      "metadata": {},
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "2f7318ad",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "d8366368",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "1bf6b2af",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "      <th>0</th>\n",
        "      <td>1000</td>\n",
        "      <td>0.0008</td>\n",
-       "      <td>7410</td>\n",
+       "      <td>7545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -792,7 +792,7 @@
       ],
       "text/plain": [
        "   objects_theoretical  min_relative_cache_size  simulation_count\n",
-       "0                 1000                   0.0008              7410\n",
+       "0                 1000                   0.0008              7545\n",
        "1                 2000                   0.0004              7950\n",
        "2                 3000                   0.0002              8334\n",
        "3                 4000                   0.0002              8352\n",
@@ -812,7 +812,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total simulations across all object configurations: 84,978\n"
+      "Total simulations across all object configurations: 85,113\n"
      ]
     }
    ],
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "af0b1f1b",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of cache simulations: 84,978\n",
+      "Total number of cache simulations: 85,113\n",
       "\n",
       "Simulation breakdown:\n",
       "- Number of algorithms: 3\n",
@@ -851,8 +851,8 @@
       "\n",
       "Expected total (if all combinations exist):\n",
       "Expected: 91,200\n",
-      "Actual: 84,978\n",
-      "Coverage: 93.2%\n"
+      "Actual: 85,113\n",
+      "Coverage: 93.3%\n"
      ]
     }
    ],
@@ -878,6 +878,99 @@
     "print(f\"Expected: {expected:,}\")\n",
     "print(f\"Actual: {total_simulations:,}\")\n",
     "print(f\"Coverage: {total_simulations/expected*100:.1f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c2a93eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== SIMULATION RUNS PER RELATIVE CACHE SIZE ===\n",
+      "\n",
+      "Summary of simulation runs per relative cache size:\n",
+      "================================================================================\n",
+      "Cache Size (relative) Total Runs   Mean Miss    Std Miss     Algorithms   Alpha Values\n",
+      "--------------------------------------------------------------------------------\n",
+      "0.000100        1959         0.9974       0.0059       3            6           \n",
+      "0.000200        3240         0.9889       0.0219       3            7           \n",
+      "0.000400        4260         0.9638       0.0579       3            8           \n",
+      "0.000800        3654         0.9300       0.1061       3            8           \n",
+      "0.001000        4800         0.8923       0.1250       3            8           \n",
+      "0.002000        4800         0.8174       0.1919       3            8           \n",
+      "0.003000        4800         0.7731       0.2297       3            8           \n",
+      "0.004000        4800         0.7447       0.2517       3            8           \n",
+      "0.008000        4800         0.6831       0.2934       3            8           \n",
+      "0.010000        4800         0.6648       0.3034       3            8           \n",
+      "0.020000        4800         0.6103       0.3255       3            8           \n",
+      "0.030000        4800         0.5788       0.3323       3            8           \n",
+      "0.040000        4800         0.5558       0.3343       3            8           \n",
+      "0.080000        4800         0.4959       0.3284       3            8           \n",
+      "0.100000        4800         0.4743       0.3226       3            8           \n",
+      "0.200000        4800         0.3946       0.2883       3            8           \n",
+      "0.300000        4800         0.3357       0.2531       3            8           \n",
+      "0.400000        4800         0.2865       0.2194       3            8           \n",
+      "0.800000        4800         0.1406       0.1175       3            8           \n",
+      "================================================================================\n",
+      "\n",
+      "SUMMARY STATISTICS:\n",
+      "Total unique cache sizes: 19\n",
+      "Total simulation runs: 85,113\n",
+      "Average runs per cache size: 4479.6\n",
+      "Min runs per cache size: 1959\n",
+      "Max runs per cache size: 4800\n",
+      "Std dev of runs per cache size: 751.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create dataframe showing simulation runs per relative cache size\n",
+    "print(\"=== SIMULATION RUNS PER RELATIVE CACHE SIZE ===\")\n",
+    "print()\n",
+    "\n",
+    "# Count simulations per cache size\n",
+    "cache_size_counts = results_df['cache_size_relative_rounded'].value_counts().sort_index()\n",
+    "\n",
+    "# Create a more detailed dataframe\n",
+    "cache_size_summary = results_df.groupby('cache_size_relative_rounded').agg({\n",
+    "    'miss_ratio': ['count', 'mean', 'std'],\n",
+    "    'algorithm': 'nunique',\n",
+    "    'alpha': 'nunique'\n",
+    "}).round(4)\n",
+    "\n",
+    "# Flatten column names\n",
+    "cache_size_summary.columns = ['Total_Runs', 'Mean_Miss_Ratio', 'Std_Miss_Ratio', 'Num_Algorithms', 'Num_Alpha_Values']\n",
+    "\n",
+    "# Reset index to make cache_size_relative_rounded a column\n",
+    "cache_size_summary = cache_size_summary.reset_index()\n",
+    "\n",
+    "print(\"Summary of simulation runs per relative cache size:\")\n",
+    "print(\"=\" * 80)\n",
+    "print(f\"{'Cache Size (relative)':<15} {'Total Runs':<12} {'Mean Miss':<12} {'Std Miss':<12} {'Algorithms':<12} {'Alpha Values':<12}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for _, row in cache_size_summary.iterrows():\n",
+    "    print(f\"{row['cache_size_relative_rounded']:<15.6f} \"\n",
+    "          f\"{row['Total_Runs']:<12.0f} \"\n",
+    "          f\"{row['Mean_Miss_Ratio']:<12.4f} \"\n",
+    "          f\"{row['Std_Miss_Ratio']:<12.4f} \"\n",
+    "          f\"{row['Num_Algorithms']:<12.0f} \"\n",
+    "          f\"{row['Num_Alpha_Values']:<12.0f}\")\n",
+    "\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\nSUMMARY STATISTICS:\")\n",
+    "print(f\"Total unique cache sizes: {len(cache_size_summary)}\")\n",
+    "print(f\"Total simulation runs: {cache_size_summary['Total_Runs'].sum():,}\")\n",
+    "print(f\"Average runs per cache size: {cache_size_summary['Total_Runs'].mean():.1f}\")\n",
+    "print(f\"Min runs per cache size: {cache_size_summary['Total_Runs'].min()}\")\n",
+    "print(f\"Max runs per cache size: {cache_size_summary['Total_Runs'].max()}\")\n",
+    "print(f\"Std dev of runs per cache size: {cache_size_summary['Total_Runs'].std():.1f}\")\n"
    ]
   }
  ],
